feat: magister route

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "magister",
+  "homepage": "https://diegof824.github.io/magister/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
